--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,7 +15,7 @@ jobs:
             - jars-
       - run:
           name: Download Dependencies
-          command: ./gradlew androidDependencies
+          command: sudo chmod +x ./gradlew
       - save_cache:
           name: Save Cache Gradle
           key: jars-{{ checksum "build.gradle" }}-{{ checksum  "app/build.gradle" }}
