--- a/gradle.properties
+++ b/gradle.properties
@@ -19,3 +19,10 @@ android.useAndroidX=true
 android.enableJetifier=true
 # Kotlin code style for this project: "official" or "obsolete":
 kotlin.code.style=official
+
+
+#Signed APK
+RELEASE_STORE_FILE=releasekey.jks
+RELEASE_STORE_PASSWORD=P@ssw0rd
+RELEASE_KEY_ALIAS=tonureleasekey
+RELEASE_KEY_PASSWORD=P@ssw0rd
