--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,11 +8,6 @@ jobs:
       JVM_OPTS: -Xmx3200m
     steps:
       - checkout
-      - run:
-          name: Build debug APK and release APK
-          command: |
-            ./gradlew :app:assembleDebug
-            ./gradlew :app:assembleDebugAndroidTest
       - restore_cache:
           name: Restore Cache Gradle
           keys:
@@ -27,8 +22,8 @@ jobs:
           paths:
             - ~/.gradle
       - run:
-          name: Build Application
-          command: ./gradlew clean assembleDebug
+          name: Build dev release app
+          command: ./gradlew assembleDevRelease
       - store_artifacts:
           name: Upload Artifacts Reports
           path: app/build/reports
