add news api for testing

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -100,18 +100,11 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 
     // Koin for Kotlin
-    implementation "org.koin:koin-core:$koin_version"
     implementation "org.koin:koin-android:$koin_version"
-    testImplementation 'org.koin:koin-test:2.0.1'
-
-    // Koin AndroidX Scope features
     implementation "org.koin:koin-androidx-scope:$koin_version"
-    // Koin AndroidX ViewModel features
     implementation "org.koin:koin-androidx-viewmodel:$koin_version"
-    implementation "org.koin:koin-android-viewmodel:$koin_version"
-    // Koin AndroidX Experimental features
     implementation "org.koin:koin-androidx-ext:$koin_version"
-
+    testImplementation "org.koin:koin-test:$koin_version"
 
     implementation "com.squareup.retrofit2:retrofit:$retrofit"
     implementation "com.squareup.retrofit2:converter-gson:$retrofit"
