--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,10 +12,10 @@
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
-        <activity android:name=".vm.VMActivity"></activity>
-        <activity android:name=".vm.VmActivity" />
+        <activity android:name=".ui.github.presenter.NewsActivity"></activity>
+        <activity android:name=".vm.VMActivity" />
         <activity android:name=".test.TestActivity" />
-        <activity android:name=".login.presenter.LoginActivity" />
+        <activity android:name=".ui.login.presenter.LoginActivity" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
