--- a/app/build.gradle
+++ b/app/build.gradle
@@ -135,4 +135,8 @@ dependencies {
     implementation 'androidx.navigation:navigation-ui-ktx:2.0.0'
 
     implementation "androidx.multidex:multidex:$multidex_version"
+
+    implementation 'com.github.bumptech.glide:glide:4.9.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.9.0'
+
 }
