new ui login usa pwd

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,6 +11,7 @@ ext {
     rxandroid = '2.1.0'
     lifecycle = "2.0.0"
     multidex_version = "2.0.1"
+    paging_version = "2.1.1"
 }
 
 android {
@@ -138,5 +139,18 @@ dependencies {
 
     implementation 'com.github.bumptech.glide:glide:4.9.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.9.0'
+
+    implementation "androidx.paging:paging-runtime:$paging_version"
+    // For Kotlin use paging-runtime-ktx
+
+    // alternatively - without Android dependencies for testing
+    testImplementation "androidx.paging:paging-common:$paging_version"
+    // For Kotlin use paging-common-ktx
+
+    // optional - RxJava support
+    implementation "androidx.paging:paging-rxjava2:$paging_version"
+    // For Kotlin use paging-rxjava2-ktx
+
+    implementation 'com.jakewharton.retrofit:retrofit2-kotlin-coroutines-adapter:0.9.2'
 
 }
